test/functions/bradc/intents/intents-strings.error2.good
intents-strings.chpl:12: In function 'bar':
intents-strings.chpl:15: error: cannot assign to const variable
  intents-strings.chpl:68: called as bar(x: string)
